# routes/recipes.js
@@ -3,9 +3,10 @@ const router = express.Router();
 let recipesControl = require('../controllers/recipes');
 const { recipeValidation } = require('../validation');
 const { validationResult } = require('express-validator');
+const { ensureAuth } = require('../middleware/auth');
 
 //route list for the recipes collection
-router.get('/', recipesControl.getRecipes);
+router.get('/', ensureAuth, recipesControl.getRecipes);
 router.post('/', recipeValidation, (req, res) => {
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
