# swagger/swagger-output.json
@@ -5,11 +5,23 @@
     "description": "This is an API Built to keep track of user recipes and user data",
     "version": "1.0.0"
   },
-  "host": "dry-river-36052.herokuapp.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
+  "securityDefinitions": {
+    "google_id_token": {
+      "authorizationUrl": "",
+      "flow": "implicit",
+      "type": "oauth2",
+      "x-google-issuer": "https://accounts.google.com",
+      "x-google-jwks_uri": "https://www.googleapis.com/oauth2/v3/certs"
+    }
+  },
+  "security": {
+    "google_id_token": ["read"]
+  },
   "paths": {
     "/users/": {
       "get": {
